# LicenseCore

./: .gitignore  BUILD_FIXES.md  CACHING_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CROSS_PLATFORM_GUIDE.md  Dockerfile.test  EXAMPLES.md  JSON_SECURITY_IMPROVEMENTS.md  LICENSE  PRODUCTION_BUILD_GUIDE.md  QUICKSTART.md  QUICK_BUILD_CHEAT_SHEET.md  README.md  RELEASE_CHECKLIST.md  TEST_REPORT.md  USAGE_GUIDE.md  WASM_GUIDE.md  WEB_DEMO.md  build.sh  build_multiplatform.sh  build_multiplatform_complete.sh  check_all_builds.sh  check_specialized_builds.sh  debug_test.sh  diagnostic.cpp  install.sh  simple_build_test.sh  temp_cmakelists.txt  test_all_builds.sh  test_compilation.sh  test_github_actions.sh  test_obf_build.sh  test_obfuscated_quick.sh  test_pure_c_obfuscated.sh  test_simple_only.cpp  test_simplified_build.sh  update_docs_wasm.sh
.github/workflows/: build.yml  ci.yml  nightly.yml  release.yml  test.yml
cmake/: LicenseCoreConfig.cmake.in
docs/: docs.html  index.html
examples/: CMakeLists.txt  caching_example.cpp  error_handling_example.cpp  hwid_tool.cpp  license_generator.cpp  simple_example.cpp
gtests/: CMakeLists.txt  test_caching.cpp  test_error_handling.cpp  test_hardware_fingerprint.cpp  test_performance.cpp  test_thread_safety.cpp  test_utils.cpp  test_utils.hpp
include/license_core/: exceptions.hpp  hardware_fingerprint.hpp  hardware_fingerprint_cached.hpp  hmac_validator.hpp  license_manager.hpp
local_multiplatform_build/package/: README.md
local_multiplatform_build/package/examples/: basic_usage  basic_usage.c  build.sh
local_multiplatform_build/package/include/: license_core_pure_c.h
src/: hardware_fingerprint.cpp  hmac_validator.cpp  license_manager.cpp
src/json/: simple_json.cpp  simple_json.hpp
tests/: CMakeLists.txt  test_simple.cpp
tests/integration/: real_world_test.sh
tests/stress/: fuzz_test.py  stress_test.cpp
wasm/: README.md  build_wasm.sh  license_core_wasm.cpp
